# ChangeLog for app-arch/xz-utils
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/xz-utils/ChangeLog,v 1.32 2011/05/24 04:11:10 vapier Exp $

*xz-utils-5.0.3 (24 May 2011)

  24 May 2011; Mike Frysinger <vapier@gentoo.org> +xz-utils-5.0.3.ebuild:
  Version bump.

*xz-utils-5.0.2 (04 Apr 2011)

  04 Apr 2011; Mike Frysinger <vapier@gentoo.org> +xz-utils-5.0.2.ebuild:
  Version bump.

  20 Mar 2011; Raúl Porcel <armin76@gentoo.org> xz-utils-5.0.1.ebuild:
  ia64/m68k/s390/sh stable wrt #355649

  16 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> xz-utils-5.0.1.ebuild:
  ppc64 stable wrt #355649

  12 Mar 2011; Tobias Klausmann <klausman@gentoo.org> xz-utils-5.0.1.ebuild:
  Stable on alpha, bug #355649

  06 Mar 2011; Christian Faulhammer <fauli@gentoo.org>
  xz-utils-5.0.1.ebuild:
  stable x86, bug 355649

  06 Mar 2011; Michael Weber <xmw@gentoo.org> xz-utils-5.0.1.ebuild:
  arm stable (bug 355649)

  05 Mar 2011; Michael Weber <xmw@gentoo.org> xz-utils-5.0.1.ebuild:
  ppc/sparc stable (bug 355649)

  01 Mar 2011; Jeroen Roovers <jer@gentoo.org> xz-utils-5.0.1.ebuild:
  Stable for HPPA (bug #355649).

  01 Mar 2011; Markos Chandras <hwoarang@gentoo.org> xz-utils-5.0.1.ebuild:
  Stable on amd64 wrt bug #355649

*xz-utils-5.0.1-r1 (01 Mar 2011)

  01 Mar 2011; Mike Frysinger <vapier@gentoo.org> +xz-utils-5.0.1-r1.ebuild,
  +files/xz-utils-5.0.1-xzgrep-typo.patch:
  Fix by Martin Väth for typo in xzgrep #356627 by Diego Elio Pettenò.

*xz-utils-5.0.1 (05 Feb 2011)

  05 Feb 2011; Mike Frysinger <vapier@gentoo.org> +xz-utils-5.0.1.ebuild:
  Version bump.

  06 Jan 2011; Mike Frysinger <vapier@gentoo.org> xz-utils-5.0.0.ebuild,
  xz-utils-9999.ebuild:
  Update blocker to allow newer versions of app-arch/lzma #218459.

*xz-utils-5.0.0 (26 Oct 2010)

  26 Oct 2010; Mike Frysinger <vapier@gentoo.org> +xz-utils-5.0.0.ebuild:
  Version bump #342741 by Samuli Suominen.
