@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/xz-utils
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/xz-utils/ChangeLog,v 1.32 2011/05/24 04:11:10 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/xz-utils/ChangeLog,v 1.33 2011/07/28 14:05:03 mgorny Exp $
+
+  28 Jul 2011; Michał Górny <mgorny@gentoo.org> xz-utils-9999.ebuild:
+  Migrate to git-2, fix EGIT_REPO_URI, per bug #376377. Reviewed by Tony Vroon.
 
 *xz-utils-5.0.3 (24 May 2011)
 
